2006-03-23  Jb Evain <jbevain@gmail.com>

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs
	  CodeGen/templates/ImageReader.cs:
		Ensure type with the same name are added
		to the collection.

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Ensure every blob signature is unique.

	* Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil/ModuleDefinition.cs:
		Rename method to avoid confusion.

2006-03-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CodeWriter.cs:
		Precisely detect whether we emit fat seh or not.

	* Mono.Cecil/ReflectionWriter.cs:
		Avoid duplicates in the typespec table.

2006-03-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Correctly write generic parameters.

	* Mono.Cecil/SecurityDeclarationReader.cs
	  Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/ReflectionWriter.cs:
		Fix for security declarations reading on .net 2.0.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/GenericContext.cs:
		Fix test case RoundtripTestFixture.boo.

2006-03-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/MetadataReader.cs:
		#Strings heap is utf8, fix #77820.

2006-03-08  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen-tests.rb
	  CodeGen/templates/Tests.cs:
		Start of a very small infrastructure to use tests from
		rotor/mono with Cecil.

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Add support for the very special case ldarg 0.
		Patch idea by Vladislav Spivak <spivak@mainsoft.com>

2006-03-07  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/ImageReader.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil/StructureReader.cs
	  Mono.Cecil.Binary/Image.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Allow users to get a loaded image using
		Image.GetImage as they have no access to
		the ImageReader.
