@@ -1,4 +1,12 @@
-2006-03-23  Jb Evain <jbevain@gmail.com>
+2006-03-24  Jb Evain  <jbevain@gmail.com>
+
+	* CodeGen/templates/ImageWriter.cs
+	  Mono.Cecil.Metadata/MetadataWriter.cs
+	  Mono.Cecil.Binary/ImageWriter.cs:
+		Replace the foreach char pattern by
+		Encoding.GetBytes
+
+2006-03-23  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/TypeReferenceCollection.cs
 	  Mono.Cecil/ExternTypeCollection.cs
